--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,110 +12,107 @@ on:
       - '**.MD'
 
   # Build and deploy the image nightly (to ensure we pick up any security updates)
-  schedule:
-    - cron: "0 14 * * *"
+  # schedule:
+  #   - cron: "0 14 * * *"
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  deploy_dockerhub_latest:
-    name: Deploy to LatestDockerHub
+  deploy_ghcr_latest:
+    name: Deploy Latest to DockerHub
     runs-on: ubuntu-latest
 
-    # Set job-wide environment variables
-    #  - REPO: repo name on dockerhub
-    #  - IMAGE: image name on dockerhub
-    env:
-      REPO: fredclausen
-      IMAGE: dumpvdl2
-      PUSH: true
     steps:
 
       # Check out our code
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
       # Set up QEMU for multi-arch builds
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
-      # Log into docker hub (so we can push images)
-      -
-        name: Login to DockerHub
+      # Log into ghcr (so we can push images)
+      - name: Login to ghcr.io
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Get metadata from repo
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       # Set up buildx for multi platform builds
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
 
-      # Build "latest"
-      -
-        name: Build & Push - latest
+      # Build & Push Dockerfile (only push if this action was NOT triggered by a PR)
+      - name: Build & Push ghcr.io/sdr-enthusiasts/docker-dumpvdl2:latest
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile
           no-cache: true
           platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm/v6,linux/arm64
-          push: ${{ env.PUSH }}
-          tags: ${{ env.REPO }}/${{ env.IMAGE }}:latest
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ghcr.io/sdr-enthusiasts/docker-dumpvdl2:latest
+          labels: ${{ steps.meta.outputs.labels }}
 
-  deploy_dockerhub_latest_noheathceck:
-    name: Deploy Latest No Heathcheck to DockerHub
+  deploy_ghcr_latest_nohealthcheck:
+    name: Deploy to Latest Noheathcheck DockerHub
     runs-on: ubuntu-latest
 
-    # Set job-wide environment variables
-    #  - REPO: repo name on dockerhub
-    #  - IMAGE: image name on dockerhub
-    env:
-      REPO: fredclausen
-      IMAGE: dumpvdl2
-      PUSH: true
     steps:
 
       # Check out our code
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v2
 
-      # Set up QEMU for multi-arch builds
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      # Log into docker hub (so we can push images)
-      -
-        name: Login to DockerHub
+      # Log into ghcr (so we can push images)
+      - name: Login to ghcr.io
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # Get metadata from repo
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+
+      # Set up QEMU for multi-arch builds
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
       # Set up buildx for multi platform builds
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
 
       # Patch dockerfile to remove healthcheck
-      -
-        name: Patch Dockerfile to remove healthcheck
+      - name: Patch Dockerfile to remove healthcheck
         run: sed '/^HEALTHCHECK /d' < Dockerfile > Dockerfile.nohealthcheck
 
       # Build "latest_nohealthcheck"
-      -
-        name: Build & Push - latest nohealthcheck
+      # Build & Push Dockerfile (only push if this action was NOT triggered by a PR)
+      - name: Build & Push ghcr.io/sdr-enthusiasts/docker-dumpvdl2:latest_nohealthcheck
         uses: docker/build-push-action@v2
         with:
           context: .
           file: ./Dockerfile.nohealthcheck
           no-cache: true
           platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm/v6,linux/arm64
-          push: ${{ env.PUSH }}
-          tags: ${{ env.REPO }}/${{ env.IMAGE }}:latest_nohealthcheck
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ghcr.io/sdr-enthusiasts/docker-dumpvdl2:latest_nohealthcheck
+          labels: ${{ steps.meta.outputs.labels }}
 
