--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Docker Hub
+name: Deploy to GHCR
 
 on:
   # Enable manual running of action if necessary
@@ -6,14 +6,14 @@ on:
     inputs:
       reason:
         required: true
-        description: 'Reason for running this workflow'
+        description: "Reason for running this workflow"
   # Build and deploy the image on pushes to main branch
   push:
     branches:
       - main
     paths-ignore:
-      - '**.md'
-      - '**.MD'
+      - "**.md"
+      - "**.MD"
 
   # Build and deploy the image nightly (to ensure we pick up any security updates)
   # schedule:
@@ -39,11 +39,10 @@ jobs:
           echo "Workflow dispatch reason: $INPUTS_REASON"
 
   deploy_ghcr_latest:
-    name: Deploy Latest to DockerHub
+    name: Deploy Latest to GHCR
     runs-on: ubuntu-latest
 
     steps:
-
       # Check out our code
       - name: Checkout
         uses: actions/checkout@v2
@@ -85,11 +84,10 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy_ghcr_latest_nohealthcheck:
-    name: Deploy to Latest Noheathcheck DockerHub
+    name: Deploy to Latest Noheathcheck GHCR
     runs-on: ubuntu-latest
 
     steps:
-
       # Check out our code
       - name: Checkout
         uses: actions/checkout@v2
@@ -134,4 +132,3 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ghcr.io/sdr-enthusiasts/docker-dumpvdl2:latest_nohealthcheck
           labels: ${{ steps.meta.outputs.labels }}
-
