--- a/.github/workflows/cancel_dupes.yml
+++ b/.github/workflows/cancel_dupes.yml
@@ -2,9 +2,10 @@ name: Cancelling Duplicates
 on:
   workflow_run:
     workflows:
-      - 'Deploy to Docker Hub'
-      - 'Linting'
-    types: ['requested']
+      - "Deploy to Docker Hub"
+      - "Linting"
+      - "Test Build"
+    types: ["requested"]
 
 jobs:
   cancel-duplicate-workflow-runs:
