--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -215,6 +215,7 @@ jobs:
       ghcr_repo: ${{ github.repository }}
       platform_linux_arm32v6_enabled: false
       platform_linux_i386_enabled: false
+      platform_linux_arm32v7_enabled: false
       get_version_method: git_commit_hash_short
       # set build_latest to true if github.event.inputs.use_test_image is false
       build_latest: ${{ github.event.inputs.use_test_image == 'false' || github.event.inputs.use_test_image == '' }}
@@ -252,6 +253,9 @@ jobs:
       build_version_specific: false
       build_platform_specific: false
       build_nohealthcheck: false
+      platform_linux_arm32v6_enabled: false
+      platform_linux_i386_enabled: false
+      platform_linux_arm32v7_enabled: false
       build_baseimage_url: :acars-decoder/:acars-decoder-test-pr
       cache_enabled: true
       cache_path: ./bin/
