--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,46 +49,6 @@ jobs:
         run: |
           echo "Workflow dispatch reason: $INPUTS_REASON"
           echo "Use test image: $INPUTS_USE_TEST_IMAGE"
-  binary_build_armv7:
-    name: Build Binary - armv7
-    runs-on: ubuntu-latest
-    # needs: test_rust_functionality
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.1
-        with:
-          fetch-depth: 0
-          repository: sdr-enthusiasts/acars-bridge
-
-      - name: Run Docker on tmpfs
-        uses: JonasAlfredsson/docker-on-tmpfs@v1
-        with:
-          tmpfs_size: 5
-          swap_size: 4
-          swap_location: "/mnt/swapfile"
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build armv7
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          file: Dockerfile.build_binary
-          tags: acars-bridge:armv7
-          platforms: linux/arm/v7
-          outputs: type=local,dest=./image_armv7/
-
-      - name: Upload artifact armv7 binary
-        uses: actions/upload-artifact@v4.3.1
-        with:
-          name: acars-bridge.armv7
-          path: ./image_armv7/acars-bridge
 
   binary_build_arm64:
     name: Build Binary - arm64
@@ -175,7 +135,7 @@ jobs:
   consolidate_binaries:
     name: Consolidate & Cache Binaries
     runs-on: ubuntu-latest
-    needs: [binary_build_amd64, binary_build_arm64, binary_build_armv7]
+    needs: [binary_build_amd64, binary_build_arm64]
     steps:
       - run: mkdir -p ./bin
 
@@ -183,11 +143,6 @@ jobs:
         with:
           name: acars-bridge.amd64
           path: ./bin/acars-bridge.amd64
-
-      - uses: actions/download-artifact@v4.1.4
-        with:
-          name: acars-bridge.armv7
-          path: ./bin/acars-bridge.armv7
 
       - uses: actions/download-artifact@v4.1.4
         with:
