--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -18,7 +18,7 @@ RUN set -x && \
 FROM ghcr.io/sdr-enthusiasts/docker-baseimage:acars-decoder-soapy
 
 ENV DEVICE_INDEX="" \
-    QUIET_LOGS="TRUE" \
+    QUIET_LOGS="FALSE" \
     FREQUENCIES="" \
     FEED_ID="" \
     PPM="0"\
